@@ -33,7 +33,8 @@ application {
     applicationDefaultJvmArgs = listOf(
         "-Djava.library.path=${platforms.joinToString(separator = ":") { "$pathToJoglLibraries$it" }}",
         "-Xmx16G",
-        "-XX:ParallelGCThreads=8",
+        //"-XX:ParallelGCThreads=8",
+        "-XX:+UseZGC"
         // used to debug native library loading
         // "-Djogamp.debug.NativeLibrary=true"
     )
